[AMORO-2871] Fix promethues reporter bugs (#2874)
Fix promethues reporter bugs